# Query_mechanism_urbind

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  Dockerfile.backend  README.md  analyze_run_tokens.py  calculate_tokens.py  check_vector_index.py  dev_toggle.md  docker-compose.yml  implementation-future.md  implementation-plan.md  implementation_plan.md  llm_config.yaml  pyproject.toml  requirements.txt  rework.md  target-architecture.md  temp_analyze.py  urbind-query-mechanism.md
app/: models.py
assets/: e2e_questions.txt  scott_questions.txt  scott_questions2.txt
backend/: Dockerfile  __init__.py  models.py
documents/: Aachen.md  Aarhus.md  Bratislava.md  Cluj_Napoca.md  Dresden.md  Dublin.md  Espoo.md  Guimaraes.md  Heidelberg.md  Krakow.md  Kranj.md  Lahti.md  Leipzig.md  Lisbon.md  Lodz.md  Mannheim.md  Munich.md  Munster.md  Nantes.md  Oslo.md  Porto.md  Rome.md  Rotterdam.md  Rzeszow.md  Seville.md  Stavanger.md  Tampere.md  Turin.md  Umea.md  Velenje.md  Vilnius.md  Vitoria_Gasteiz.md  Warszawa.md  Wroclaw.md  Zaragoza.md  amsterdam.md  angers.md  antwerp.md  athens.md  barcelona.md  (+63 more)
frontend/: .env.example  Dockerfile  README.md  package-lock.json  package.json
k8s/: backend-build-vector-index-job.yml  backend-configmap.yml  backend-deployment.yml  backend-pvc.yml  backend-service.yml  frontend-deployment.yml  frontend-service.yml
tests/: __init__.py  support.py  test_agents_runtime.py  test_agents_settings.py  test_agents_tool_limits.py  test_analyze_run_tokens.py  test_api_assumptions.py  test_api_chat.py  test_api_cities.py  test_api_runs.py  test_calculator_tool.py  test_chat_followup_research.py  test_chat_followup_router.py  test_chunking_benchmark.py  test_config.py  test_context_chat_prompts.py  test_context_chat_service.py  test_db_client.py  test_inspect_decision_chunks.py  test_markdown_decision_validation.py  test_markdown_output_utils.py  test_markdown_reliability_benchmark.py  test_models.py  (+12 more)
(+246 files in other folders)
